# stella-implementation-assignment

./: .gitignore  README.md
C++/: CMakeLists.txt  Eval.cpp  Makefile  README.md  TypeCheck.cpp
Java/src/: Makefile
Java/src/org/syntax/stella/: PrettyPrinter.java  stellaParser.g4  stellaParser.interp  stellaParser.java  stellaParserBaseListener.java  stellaParserListener.java
Java/src/stella/: AbstractVisitor.java  AllVisitor.java  ComposVisitor.java  FoldVisitor.java  PrettyPrinter.java  Test.java  VisitSkel.java  stellaLexer.java  stellaParser.g4  stellaParser.java  stellaParserBaseListener.java  stellaParserListener.java
Java/src/stella/Absyn/: APatternBinding.java  Assign.java  ConstMemory.java  ConstUnit.java  Decl.java  DeclExceptionType.java  DeclExceptionVariant.java  Deref.java  Divide.java  Expr.java  Inl.java  Inr.java  LetRec.java  ListPatternBinding.java  Panic.java  Pattern.java  PatternBinding.java  PatternInl.java  PatternInr.java  PatternUnit.java  Ref.java  Sequence.java  Subtract.java  Throw.java  TryCatch.java  TryWith.java  Type.java  TypeBottom.java  TypeCast.java  TypeRef.java  TypeTop.java
JavaScript/src/stella/: stellaLexer.js  stellaParser.interp  stellaParser.js  stellaParserListener.js
OCaml/src/Stella/: ParStella.ml  ParStella.mly
Python/src/stella/: stellaParser.g4  stellaParser.interp  stellaParser.py  stellaParser.tokens  stellaParserListener.py
doc/: Stella.tex
